[gd_scene load_steps=12 format=3 uid="uid://dpnwah0nil72"]

[ext_resource type="Texture2D" uid="uid://c5wir4i2x7o3k" path="res://Assets/Sprites/Game5/tileset.png" id="1_6wpj4"]
[ext_resource type="Script" path="res://Scripts/Game5/level1.gd" id="1_m7wkq"]
[ext_resource type="PackedScene" uid="uid://cs68o8vrt2nl" path="res://Scenes/Game5/pellet.tscn" id="3_nj5mk"]
[ext_resource type="PackedScene" uid="uid://mt28usyngs0l" path="res://Scenes/Game5/intersection.tscn" id="4_r2sbf"]
[ext_resource type="PackedScene" uid="uid://d36h16go1res6" path="res://Scenes/Game5/pellet_intersection.tscn" id="5_m7ye6"]
[ext_resource type="PackedScene" uid="uid://b1i0r8drg3bsb" path="res://Scenes/Game5/power_pellet.tscn" id="6_nb7up"]
[ext_resource type="PackedScene" uid="uid://hdshakhrxr7y" path="res://Scenes/Game5/power_pellet_intersection.tscn" id="7_1dngf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e04wr"]
texture = ExtResource("1_6wpj4")
texture_region_size = Vector2i(20, 20)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, -5, 10, 10, 10, 10, -5)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(10, -5, 10, 10, -10, 10, -10, -5)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -5, -10, 10, 5, 10, 5, -5)
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, -5, 10, 5, 10, 5, -5)
3:0/0/terrains_peering_bit/bottom_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(10, 5, 10, -5, -5, -5, -5, 10, 5, 10, 5, 5)
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, 10, 5, 10, 5, -5, -10, -5, -10, 5, -5, 5)
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/left_side = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, 10, -5, 2.5, -5, -2.5, -5, -10, 5, -10, 5, -2.5, 5, 2.5, 5, 10)
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/top_side = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, 5, 10, 5, 10, -5, 5, -5, 5, -10, -5, -10, -5, -5, -10, -5)
7:0/0/terrains_peering_bit/right_side = 0
7:0/0/terrains_peering_bit/left_side = 0
7:0/0/terrains_peering_bit/top_side = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -10, -5, 10, 5, 10, 5, 5, 10, 5, 10, -5, 5, -5, 5, -10)
8:0/0/terrains_peering_bit/right_side = 0
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/top_side = 0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(10, -10, 10, 10, -5, 10, -5, -10)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(5, -10, 5, 10, -10, 10, -10, -10)
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -10, -5, 5, 5, 5, 5, -10)
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(5, -10, -5, -10, -5, 5, 10, 5, 10, -5, 5, -5)
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/top_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -5, -10, 5, 5, 5, 5, -10, -5, -10, -5, -5)
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_side = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, 5, -10, -5, 10, -5, 10, 5)
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/left_side = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(10, -5, -10, -5, -10, 5, -5, 5, -5, 10, 5, 10, 5, 5, 10, 5)
7:1/0/terrains_peering_bit/right_side = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/left_side = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(5, 10, 5, -10, -5, -10, -5, -5, -10, -5, -10, 5, -5, 5, -5, 10)
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_side = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/terrain = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(10, 10, 10, -5, 5, -5, 5, -10, -5, -10, -5, -5, -10, -5, -10, 10)
9:1/0/terrains_peering_bit/right_side = 0
9:1/0/terrains_peering_bit/bottom_right_corner = 0
9:1/0/terrains_peering_bit/bottom_side = 0
9:1/0/terrains_peering_bit/bottom_left_corner = 0
9:1/0/terrains_peering_bit/left_side = 0
9:1/0/terrains_peering_bit/top_side = 0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -10, -5, 5, 10, 5, 10, -10)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(10, -10, 10, 5, -10, 5, -10, -10)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, -10, 5, 5, 5, 5, -10)
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, -5, -5, 5, 10, 5, 10, -5)
3:2/0/terrains_peering_bit/right_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -5, -10, 5, 5, 5, 5, -5)
4:2/0/terrains_peering_bit/left_side = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, 5, 5, 5, 5, -5, -5, -5)
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5, 10, 5, 10, 5, 5, 10, 5, 10, -5, 5, -5, 5, -10, -5, -10, -5, -5, -10, -5, -10, 5, -5, 5)
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_side = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -5, -10, 5, 10, 5, 10, -5)
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -5, -10, 5, 10, 5, 10, -5)
9:2/0 = 0
9:2/0/terrain_set = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -5, -10, 5, 10, 5, 10, -5)
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_h6bf4"]
scenes/1/scene = ExtResource("3_nj5mk")
scenes/2/scene = ExtResource("4_r2sbf")
scenes/3/scene = ExtResource("5_m7ye6")
scenes/4/scene = ExtResource("6_nb7up")
scenes/5/scene = ExtResource("7_1dngf")

[sub_resource type="TileSet" id="TileSet_vn56i"]
tile_size = Vector2i(20, 20)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 9
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Maze"
terrain_set_0/terrain_0/color = Color(1, 0, 0, 1)
sources/0 = SubResource("TileSetAtlasSource_e04wr")
sources/1 = SubResource("TileSetScenesCollectionSource_h6bf4")

[sub_resource type="CircleShape2D" id="CircleShape2D_jnp6f"]

[node name="Level1" type="Node2D"]
texture_filter = 1
script = ExtResource("1_m7wkq")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_vn56i")
format = 2
layer_0/tile_data = PackedInt32Array(0, 262144, 0, 65536, 393216, 0, 1, 393216, 1, 131074, 0, 0, 196610, 0, 2, 196611, 65536, 2, 196612, 131072, 2, 131076, 131072, 0, 131075, 65536, 0, 196614, 196608, 1, 131078, 393216, 0, 65542, 393216, 0, 6, 458752, 1, 5, 393216, 1, 4, 393216, 1, 3, 393216, 1, 2, 393216, 1, 131072, 393216, 0, 196608, 393216, 0, 262144, 393216, 0, 327680, 262144, 1, 327681, 393216, 1, 327682, 327680, 0, 393218, 393216, 0, 458754, 327680, 1, 458753, 393216, 1, 458752, 196608, 2, 589824, 196608, 2, 589825, 393216, 1, 589826, 327680, 0, 655362, 393216, 0, 720898, 393216, 0, 786434, 393216, 0, 917506, 327680, 1, 851970, 393216, 0, 917505, 393216, 1, 917504, 196608, 2, 1048576, 196608, 2, 1048577, 393216, 1, 1048578, 327680, 0, 327684, 196608, 0, 393220, 393216, 0, 458756, 393216, 0, 524292, 393216, 0, 589828, 262144, 1, 589829, 393216, 1, 589830, 262144, 2, 458758, 0, 2, 393222, 0, 1, 327686, 0, 0, 327687, 65536, 0, 327688, 131072, 0, 393224, 131072, 1, 458760, 131072, 2, 458759, 65536, 2, 393223, 65536, 1, 196616, 0, 2, 131080, 0, 0, 131081, 65536, 0, 196617, 65536, 2, 327690, 196608, 0, 393226, 393216, 0, 458762, 393216, 0, 524298, 393216, 0, 589834, 458752, 0, 589833, 393216, 1, 589832, 196608, 2, 589835, 393216, 1, 589836, 262144, 2, 589838, 196608, 2, 589839, 393216, 1, 589840, 327680, 1, 524304, 393216, 0, 458768, 393216, 0, 393232, 393216, 0, 327696, 196608, 0, 327692, 0, 0, 393228, 0, 1, 458764, 0, 2, 458765, 65536, 2, 458766, 131072, 2, 393230, 131072, 1, 327694, 131072, 0, 327693, 65536, 0, 393229, 65536, 1, 196618, 65536, 2, 196619, 65536, 2, 196620, 131072, 2, 131084, 131072, 0, 131083, 65536, 0, 131082, 65536, 0, 196622, 196608, 1, 131086, 393216, 0, 65550, 393216, 0, 14, 458752, 1, 13, 393216, 1, 12, 393216, 1, 11, 393216, 1, 10, 393216, 1, 9, 393216, 1, 8, 393216, 1, 7, 393216, 1, 131088, 0, 0, 196624, 0, 2, 196625, 65536, 2, 196626, 131072, 2, 131090, 131072, 0, 131089, 65536, 0, 15, 393216, 1, 16, 393216, 1, 17, 393216, 1, 18, 393216, 1, 19, 393216, 1, 20, 327680, 0, 65556, 393216, 0, 131092, 393216, 0, 196628, 393216, 0, 262164, 393216, 0, 327700, 327680, 1, 327699, 393216, 1, 327698, 262144, 0, 458772, 262144, 2, 458771, 393216, 1, 458770, 262144, 1, 393234, 393216, 0, 589844, 262144, 2, 589843, 393216, 1, 589842, 262144, 0, 655378, 393216, 0, 720914, 393216, 0, 786450, 393216, 0, 851986, 393216, 0, 917522, 262144, 1, 917523, 393216, 1, 917524, 262144, 2, 1048594, 262144, 0, 1048595, 393216, 1, 1048596, 262144, 2, 720910, 196608, 2, 720911, 393216, 1, 720912, 327680, 0, 786448, 393216, 0, 851984, 393216, 0, 917520, 196608, 1, 720902, 262144, 2, 720901, 393216, 1, 720900, 262144, 0, 786436, 393216, 0, 851972, 393216, 0, 917508, 196608, 1, 720904, 262144, 0, 786440, 393216, 0, 851976, 393216, 0, 917512, 262144, 1, 917513, 393216, 1, 917514, 393216, 1, 917515, 393216, 1, 720908, 327680, 0, 786444, 393216, 0, 851980, 393216, 0, 917516, 327680, 1, 720907, 589824, 2, 720905, 458752, 2, 1048580, 196608, 2, 1048581, 393216, 1, 1048582, 458752, 0, 1048583, 393216, 1, 1048584, 262144, 2, 983046, 393216, 0, 917510, 393216, 0, 851974, 196608, 0, 851982, 196608, 0, 917518, 393216, 0, 983054, 393216, 0, 1048590, 458752, 0, 1048589, 393216, 1, 1048588, 196608, 2, 1048591, 393216, 1, 1048592, 262144, 2, 1048586, 196608, 0, 1114122, 393216, 0, 1179657, 65536, 0, 1179659, 65536, 0, 1179656, 0, 0, 1245192, 0, 2, 1245193, 65536, 2, 1245195, 65536, 2, 1245196, 131072, 2, 1179660, 131072, 0, 1179658, 589824, 1, 1245194, 65536, 2, 1179662, 0, 0, 1245198, 0, 2, 1245199, 65536, 2, 1245200, 131072, 2, 1179664, 131072, 0, 1179663, 65536, 0, 1179654, 131072, 0, 1179653, 65536, 0, 1179652, 0, 0, 1245188, 0, 2, 1245189, 65536, 2, 1245190, 131072, 2, 1114130, 393216, 0, 1179666, 393216, 0, 1245202, 262144, 1, 1245203, 393216, 1, 1245204, 327680, 0, 1376274, 131072, 0, 1441810, 131072, 1, 1507346, 131072, 1, 1572882, 131072, 2, 1572881, 65536, 2, 1572880, 0, 2, 1507344, 0, 1, 1441808, 0, 1, 1376272, 0, 0, 1376273, 65536, 0, 1441809, 65536, 1, 1507345, 65536, 1, 1310740, 393216, 0, 1376276, 393216, 0, 1441812, 393216, 0, 1507348, 393216, 0, 1572884, 393216, 0, 1638420, 393216, 0, 1703956, 327680, 1, 1703955, 393216, 1, 1703954, 393216, 1, 1703953, 393216, 1, 1703952, 393216, 1, 1703951, 393216, 1, 1703950, 393216, 1, 1703949, 393216, 1, 1703948, 393216, 1, 1703947, 393216, 1, 1703946, 393216, 1, 1703945, 393216, 1, 1703944, 393216, 1, 1703940, 393216, 1, 1703939, 393216, 1, 1703941, 393216, 1, 1703942, 393216, 1, 1703943, 393216, 1, 1114114, 393216, 0, 1179650, 393216, 0, 1245186, 327680, 1, 1245185, 393216, 1, 1245184, 262144, 0, 1310720, 393216, 0, 1376256, 393216, 0, 1441792, 393216, 0, 1507328, 393216, 0, 1572864, 393216, 0, 1638400, 393216, 0, 1703936, 262144, 1, 1703937, 393216, 1, 1703938, 393216, 1, 1376258, 0, 0, 1441794, 0, 1, 1507330, 0, 1, 1572866, 0, 2, 1572867, 65536, 2, 1572868, 131072, 2, 1507332, 131072, 1, 1441796, 131072, 1, 1376260, 131072, 0, 1376259, 65536, 0, 1441795, 65536, 1, 1507331, 65536, 1, 1572870, 196608, 1, 1507334, 393216, 0, 1441798, 393216, 0, 1376262, 262144, 0, 1376263, 393216, 1, 1376264, 262144, 2, 1572878, 196608, 1, 1507342, 393216, 0, 1441806, 393216, 0, 1376270, 327680, 0, 1376269, 393216, 1, 1376268, 196608, 2, 1376266, 196608, 0, 1441802, 393216, 0, 1507338, 589824, 1, 1507337, 65536, 0, 1507336, 0, 0, 1572872, 0, 2, 1572873, 65536, 2, 1572874, 65536, 2, 1572875, 65536, 2, 1572876, 131072, 2, 1507340, 131072, 0, 1507339, 65536, 0, 720906, 524288, 2, 65537, 1, 196608, 65538, 1, 65536, 65539, 1, 65536, 65540, 1, 65536, 65541, 1, 196608, 131077, 1, 65536, 196613, 1, 65536, 262149, 1, 196608, 262148, 1, 65536, 262147, 1, 196608, 262146, 1, 65536, 262145, 1, 196608, 196609, 1, 65536, 262150, 1, 65536, 262151, 1, 196608, 262152, 1, 65536, 262153, 1, 196608, 262154, 1, 65536, 262155, 1, 196608, 262156, 1, 65536, 262157, 1, 196608, 262158, 1, 65536, 262159, 1, 196608, 262160, 1, 65536, 262161, 1, 196608, 262162, 1, 65536, 262163, 1, 196608, 196627, 1, 65536, 65555, 1, 196608, 65554, 1, 65536, 65553, 1, 65536, 65552, 1, 65536, 65551, 1, 196608, 131087, 1, 65536, 196623, 1, 65536, 196621, 1, 65536, 131085, 1, 65536, 65549, 1, 196608, 65548, 1, 65536, 65547, 1, 65536, 65546, 1, 65536, 65545, 1, 65536, 65544, 1, 65536, 65543, 1, 196608, 131079, 1, 65536, 196615, 1, 65536, 327691, 1, 65536, 393227, 1, 65536, 458763, 1, 65536, 524299, 1, 196608, 524300, 1, 65536, 524301, 1, 196608, 524302, 1, 65536, 524303, 1, 196608, 458767, 1, 65536, 393231, 1, 65536, 327695, 1, 65536, 327689, 1, 65536, 393225, 1, 65536, 458761, 1, 65536, 524297, 1, 196608, 524296, 1, 65536, 524295, 1, 196608, 524294, 1, 65536, 524293, 1, 196608, 458757, 1, 65536, 393221, 1, 65536, 327685, 1, 65536, 327683, 1, 65536, 393219, 1, 65536, 458755, 1, 65536, 524291, 1, 196608, 589827, 1, 65536, 655363, 1, 196608, 720899, 1, 65536, 786435, 1, 65536, 851971, 1, 65536, 917507, 1, 65536, 983043, 1, 196608, 1048579, 1, 65536, 1114115, 1, 196608, 1179651, 1, 65536, 1245187, 1, 65536, 1310723, 1, 196608, 327697, 1, 65536, 393233, 1, 65536, 458769, 1, 65536, 524305, 1, 196608, 589841, 1, 65536, 655377, 1, 196608, 720913, 1, 65536, 786449, 1, 65536, 851985, 1, 65536, 917521, 1, 65536, 983057, 1, 196608, 1048593, 1, 65536, 1114129, 1, 196608, 1179665, 1, 65536, 1245201, 1, 65536, 1310737, 1, 196608, 1310721, 1, 196608, 1310722, 1, 65536, 1310724, 1, 65536, 1310725, 1, 196608, 1310726, 1, 65536, 1310727, 1, 196608, 1310728, 1, 65536, 1310729, 1, 196608, 1310731, 1, 196608, 1310732, 1, 65536, 1310733, 1, 196608, 1310734, 1, 65536, 1310735, 1, 196608, 1310736, 1, 65536, 1310738, 1, 65536, 1310739, 1, 196608, 1376275, 1, 65536, 1441811, 1, 65536, 1572883, 1, 65536, 1638419, 1, 196608, 1638418, 1, 65536, 1638417, 1, 65536, 1638416, 1, 65536, 1638415, 1, 196608, 1638414, 1, 65536, 1638413, 1, 196608, 1638412, 1, 65536, 1638411, 1, 65536, 1638410, 1, 65536, 1638409, 1, 65536, 1638408, 1, 65536, 1638407, 1, 196608, 1638406, 1, 65536, 1638405, 1, 196608, 1638404, 1, 65536, 1638403, 1, 65536, 1638402, 1, 65536, 1638401, 1, 196608, 1572865, 1, 65536, 1441793, 1, 65536, 1376257, 1, 65536, 1376265, 1, 65536, 1441801, 1, 196608, 1441800, 1, 65536, 1441799, 1, 196608, 1507335, 1, 65536, 1572871, 1, 65536, 1376261, 1, 65536, 1441797, 1, 65536, 1507333, 1, 65536, 1572869, 1, 65536, 1376267, 1, 65536, 1441803, 1, 196608, 1441804, 1, 65536, 1441805, 1, 196608, 1507341, 1, 65536, 1572877, 1, 65536, 1376271, 1, 65536, 1441807, 1, 65536, 1507343, 1, 65536, 1572879, 1, 65536, 1114125, 1, 196608, 1179661, 1, 65536, 1245197, 1, 65536, 1114126, 1, 65536, 1114127, 1, 65536, 1114128, 1, 65536, 1114119, 1, 196608, 1179655, 1, 65536, 1245191, 1, 65536, 1114118, 1, 65536, 1114117, 1, 65536, 1114116, 1, 65536, 1114121, 1, 131072, 1114123, 1, 131072, 983051, 1, 131072, 983049, 1, 131072, 983047, 1, 131072, 983045, 1, 131072, 983053, 1, 131072, 983055, 1, 131072, 786447, 1, 131072, 786445, 1, 131072, 786439, 1, 131072, 786437, 1, 131072, 655367, 1, 131072, 655373, 1, 131072, 655370, 1, 131072, 131073, 1, 262144, 131091, 1, 262144, 1507347, 1, 262144, 1507329, 1, 262144)

[node name="TopLeftPortal" type="Area2D" parent="."]
position = Vector2(0, 170)
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeftPortal"]
shape = SubResource("CircleShape2D_jnp6f")

[node name="TopRightPortal" type="Area2D" parent="."]
position = Vector2(420, 170)
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRightPortal"]
shape = SubResource("CircleShape2D_jnp6f")

[node name="BottomLeftPortal" type="Area2D" parent="."]
position = Vector2(0, 310)
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeftPortal"]
shape = SubResource("CircleShape2D_jnp6f")

[node name="BottomRightPortal" type="Area2D" parent="."]
position = Vector2(420, 310)
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRightPortal"]
shape = SubResource("CircleShape2D_jnp6f")

[connection signal="body_entered" from="TopLeftPortal" to="." method="_on_top_left_portal_body_entered"]
[connection signal="body_entered" from="TopRightPortal" to="." method="_on_top_right_portal_body_entered"]
[connection signal="body_entered" from="BottomLeftPortal" to="." method="_on_bottom_left_portal_body_entered"]
[connection signal="body_entered" from="BottomRightPortal" to="." method="_on_bottom_right_portal_body_entered"]
